improved mobile format, prevented resizing when pic changes

--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
       <div id="pic">
       </div>
       <div class="word">
-        <p>
-          <strong>Start selecting letters for your word! <br /> Or Frank is doomed!
-        </p>
-        <span id="word"></span>
+        <strong>
+          <span id="word"></span>
+        </strong>
 
         <br />
         <br />
