added more effective WIN/LOSE STATE communications. new WIN pick used. gameplay pauses when user WINS or LOSES. buttons turn GREEN/RED as user makes guesses.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
       <div class="word">
         <strong>
           <span id="word"></span>
+
+          <div>
+            <span id="flavor"></span>
+          </div>
+
         </strong>
 
         <br />
