removed MIN-HEIGHT from DIVS (looks sloppy on mobile). added internal hyperlinks to keep the picture in view

--- a/index.html
+++ b/index.html
@@ -52,32 +52,84 @@
         <br />
         <br />
 
-        <div id="A" class="select">A</div>
-        <div id="B" class="select">B</div>
-        <div id="C" class="select">C</div>
-        <div id="D" class="select">D</div>
-        <div id="E" class="select">E</div>
-        <div id="F" class="select">F</div>
-        <div id="G" class="select">G</div>
-        <div id="H" class="select">H</div>
-        <div id="I" class="select">I</div>
-        <div id="J" class="select">J</div>
-        <div id="K" class="select">K</div>
-        <div id="L" class="select">L</div>
-        <div id="M" class="select">M</div>
-        <div id="N" class="select">N</div>
-        <div id="O" class="select">O</div>
-        <div id="P" class="select">P</div>
-        <div id="Q" class="select">Q</div>
-        <div id="R" class="select">R</div>
-        <div id="S" class="select">S</div>
-        <div id="T" class="select">T</div>
-        <div id="U" class="select">U</div>
-        <div id="V" class="select">V</div>
-        <div id="W" class="select">W</div>
-        <div id="X" class="select">X</div>
-        <div id="Y" class="select">Y</div>
-        <div id="Z" class="select">Z</div>
+        <a href="#pic">
+          <div id="A" class="select">A</div>
+        </a>
+        <a href="#pic">
+          <div id="B" class="select">B</div>
+        </a>
+        <a href="#pic">
+          <div id="C" class="select">C</div>
+        </a>
+        <a href="#pic">
+          <div id="D" class="select">D</div>
+        </a>
+        <a href="#pic">
+          <div id="E" class="select">E</div>
+        </a>
+        <a href="#pic">
+          <div id="F" class="select">F</div>
+        </a>
+        <a href="#pic">
+          <div id="G" class="select">G</div>
+        </a>
+        <a href="#pic">
+          <div id="H" class="select">H</div>
+        </a>
+        <a href="#pic">
+          <div id="I" class="select">I</div>
+        </a>
+        <a href="#pic">
+          <div id="J" class="select">J</div>
+        </a>
+        <a href="#pic">
+          <div id="K" class="select">K</div>
+        </a>
+        <a href="#pic">
+          <div id="L" class="select">L</div>
+        </a>
+        <a href="#pic">
+          <div id="M" class="select">M</div>
+        </a>
+        <a href="#pic">
+          <div id="N" class="select">N</div>
+        </a>
+        <a href="#pic">
+          <div id="O" class="select">O</div>
+        </a>
+        <a href="#pic">
+          <div id="P" class="select">P</div>
+        </a>
+        <a href="#pic">
+          <div id="Q" class="select">Q</div>
+        </a>
+        <a href="#pic">
+          <div id="R" class="select">R</div>
+        </a>
+        <a href="#pic">
+          <div id="S" class="select">S</div>
+        </a>
+        <a href="#pic">
+          <div id="T" class="select">T</div>
+        </a>
+        <a href="#pic">
+          <div id="U" class="select">U</div>
+        </a>
+        <a href="#pic">
+          <div id="V" class="select">V</div>
+        </a>
+        <a href="#pic">
+          <div id="W" class="select">W</div>
+        </a>
+        <a href="#pic">
+          <div id="X" class="select">X</div>
+        </a>
+        <a href="#pic">
+          <div id="Y" class="select">Y</div>
+        </a>
+        <a href="#pic">
+          <div id="Z" class="select">Z</div>
+        </a>
 
         </strong>
       </div>
