making it possible to share on LinkedIN

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
 
+  <link rel="icon" href="assets/images/icon.jpg">
+
+  <meta property="og:title" content="Save Frank from the Hangman">
+  <meta property="og:image" content="assets/images/SaveFrank.jpg">
+  <meta property:"og:description" content="A simple Hangman game. Hours of fun with random words to guess!">
+  <meta property="og:url" content="https://crenzio.github.io/Hangman/">
+
   <title>Hangman</title>
 </head>
 
