--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <link rel="prefetch" href="assets/images/pic15.jpg">
 
     <meta property="og:title" content="Save Frank from the Hangman">
-    <meta property="og:image" content="assets/images/SaveFrank.jpg">
-    <meta property: "og:description" content="A simple Hangman game. Hours of fun with random words to guess!">
+    <meta property="og:image" content="assets/images/SaveFrankFast.jpg">
+    <meta property="og:description" content="A simple Hangman game. Hours of fun with random words to guess!">
     <meta property="og:url" content="https://crenzio.github.io/Hangman/">
 
     <title>Hangman</title>
