full word list (148) added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <meta property="og:title" content="Save Frank from the Hangman">
     <meta property="og:image" content="assets/images/SaveFrankFast.jpg">
-    <meta property="og:description" content="A simple Hangman game. Hours of fun with random words to guess!">
+    <meta property="og:description" content="A simple Hangman game. Hours of fun with over 147.895 challenging words to guess!">
     <meta property="og:url" content="https://crenzio.github.io/Hangman/">
 
     <title>Hangman</title>
